[package]
name = "moss"
version = "0.1.0"
edition.workspace = true

[dependencies]
config = { path = "../crates/config" }
container = { path = "../crates/container" }
dag = { path = "../crates/dag" }
stone = { path = "../crates/stone" }
triggers = { path = "../crates/triggers" }
tui = { path = "../crates/tui" }
vfs = { path = "../crates/vfs" }

bytes.workspace = true
chrono.workspace = true
clap.workspace = true
derive_more.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true
itertools.workspace = true
futures.workspace = true
hex.workspace = true
log.workspace = true
nix.workspace = true
rayon.workspace = true
reqwest.workspace = true
serde.workspace = true
sha2.workspace = true
strum.workspace = true
tokio.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
url.workspace = true
xxhash-rust.workspace = true
